--- a/globals.css
+++ b/globals.css
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  text-align: center;
 }
 
 body {
@@ -99,4 +100,19 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+
+#avatarNav{
+height: 60px;
+float: right;
+margin-right: 20px;
+}
+
+#nav{
+  width: 100%;
+}
+
+.navItems{
+  float:left;
 }
