styled login and changes in index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 body{
-    overflow: hidden;
     background: black;
+    overflow: auto;
+    scroll-behavior: smooth;
 }
+
